--- a/src/App.css
+++ b/src/App.css
@@ -3,9 +3,10 @@
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
+  animation: App-logo-spin infinite 1.3s linear;
   height: 40vmin;
   pointer-events: none;
+  width: 150px
 }
 
 .App-header {
